--- a/index.html
+++ b/index.html
@@ -283,6 +283,9 @@
                         <a class="nav-link" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#creative">Creative</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
@@ -465,6 +468,56 @@
         </div>
     </section>
 
+    <!-- Creative Section -->
+    <section id="creative" class="section bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center section-title">
+                    <h2 class="display-4 fw-bold">Creative Pursuits</h2>
+                    <p class="lead text-muted">Beyond tech, I love expressing myself through poetry, art, singing and public speaking</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <div class="skill-card">
+                        <div class="skill-icon">
+                            <i class="fas fa-feather"></i>
+                        </div>
+                        <h5>Poetry</h5>
+                        <p>Writing reflective and inspirational pieces.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="skill-card">
+                        <div class="skill-icon">
+                            <i class="fas fa-palette"></i>
+                        </div>
+                        <h5>Art</h5>
+                        <p>Sketching and creative visual storytelling.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="skill-card">
+                        <div class="skill-icon">
+                            <i class="fas fa-microphone"></i>
+                        </div>
+                        <h5>Singing</h5>
+                        <p>Sharing covers and performances.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="skill-card">
+                        <div class="skill-icon">
+                            <i class="fas fa-bullhorn"></i>
+                        </div>
+                        <h5>Speaking</h5>
+                        <p>Hosting, presentations and public speaking.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Projects Section -->
     <section id="projects" class="section bg-light">
         <div class="container">
@@ -596,6 +649,9 @@
                             <a href="http://www.linkedin.com/in/swathi-burgula" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                             <a href="https://github.com/SwathiBurgula" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
                             <a href="https://www.hackerrank.com/profile/swathiburgula70" target="_blank" title="HackerRank"><i class="fas fa-code"></i></a>
+                            <a href="https://www.instagram.com/swathi_burgula3?igsh=MThhM3ZiYjhibGxl" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+                            <a href="https://facebook.com/share/1JWR8A7J6u/" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
+                            <a href="https://m.starmakerstudios.com/d/profileinfo?from_sid=62123195165&type=sing&color=FE3A6A&shareTime=1754997193&app_name=sm&userId=10977524099090058&cardKey=Profile&pid=Profire_share_B&showNavigation=true&showBar=1&share_type=copyLink" target="_blank" title="StarMaker"><i class="fas fa-music"></i></a>
                         </div>
                     </div>
                 </div>
@@ -685,3 +741,5 @@
     </script>
 </body>
 </html>
+
+
